--- a/publications.bib
+++ b/publications.bib
@@ -17,3 +17,151 @@
   organization={ACL},
   fulltext = "http://aclweb.org/anthology/W18-1205",
 }
+
+@inproceedings{guo2018machine,
+  title={Machine Learning Predictions for Underestimation of Job Runtime on HPC System},
+  author={Guo, Jian and Nomura, Akihiro and Barton, Ryan and Zhang, Haoyu and Matsuoka, Satoshi},
+  booktitle={Asian Conference on Supercomputing Frontiers},
+  pages={179--198},
+  year={2018},
+  organization={Springer}
+}
+
+@inproceedings{oyama-bigdata2016,
+  author       = {Oyama, Yosuke and Nomura, Akihiro and Sato, Ikuro and Nishimura, Hiroki and Tamatsu, Yukimasa and Matsuoka, Satoshi},
+  booktitle    = {2016 IEEE International Conference on Big Data (Big Data)},
+  pages        = {66--75},
+  title        = {{Predicting Statistics of Asynchronous SGD Parameters for a Large-Scale Distributed Deep Learning System on GPU Supercomputers}},
+  howpublished = {http://ieeexplore.ieee.org/document/7840590/},
+  year         = {2016},
+}
+
+@inproceedings{wijayanto2017asonam, 
+author = "Wijayanto, Arie Wahyu and Murata, Tsuyoshi", 
+title = "Flow-Aware Vertex Protection Strategy on Large Social Networks", 
+booktitle = "Proceedings of The 2017 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM 2017)", 
+series = "ASONAM 2017",
+year = "2017", 
+pages = "58-63", 
+month = "Aug",
+isbn = "978-1-4503-4993-2/17/07",
+}
+
+@article{wijayanto2018apns,
+author = "Wijayanto, Arie Wahyu and Murata, Tsuyoshi",
+title = "Pre-emptive spectral graph protection strategies on multiplex social networks",
+journal = "Applied Network Science",
+publisher = "Springer",
+year = "2018",
+month = "Apr",
+day = "11",
+volume = "3",
+number = "1",
+pages = "5",
+issn = "2364-8228",
+}
+
+@inproceedings{wijayanto2018wi, 
+author = "Wijayanto, Arie Wahyu and Murata, Tsuyoshi",
+title = "Learning Adaptive Graph Protection Strategy on Dynamic Networks via Reinforcement Learning", 
+booktitle = "Proceedings of The 2018 IEEE/WIC/ACM International Conference on Web Intelligence (WI 2018)", 
+series = "WI 2018",
+year = "2018", 
+month = "Dec",
+pages = "to appear",
+}
+
+
+
+@inproceedings{Naganuma2018a,
+    Author = {Hiroki Naganuma and Shun Iwase and Linsho Kaku and Hikaru Nakata and Rio Yokota},
+    Booktitle = {Forum on Information Technology},
+    Date-Added = {2018-09-25 02:36:26 -0700},
+    Date-Modified = {2018-09-25 02:38:50 -0700},
+    Title = {Hyper-parameter Tuning of Approximate Natural Gradient Methods for Highly Parallel Distributed Deep Learning},
+    Year = {2018}}
+
+@inproceedings{Otomo2018a,
+    Author = {Hiroyuki Ohtomo and Kazuki Osawa and Rio Yokota},
+    Booktitle = {The 80th National Convention of IPSJ},
+    Date-Added = {2018-09-25 02:34:41 -0700},
+    Date-Modified = {2018-09-25 02:35:35 -0700},
+    Title = {Deep Learning Using Hierarchical Low-Rank Approximation of the Fisher Information Matrix},
+    Year = {2018}}
+
+@inproceedings{Otomo2018,
+    Author = {Hiroyuki Otomo and Kazuki Osawa and Rio Yokota},
+    Booktitle = {The 163rd Workshop on High Performance Computing},
+    Date-Added = {2018-09-25 02:33:58 -0700},
+    Date-Modified = {2018-09-25 02:34:32 -0700},
+    Title = {Distributed Learning of Deep Neural Networks Using the Kronecker Factorization of the Fisher Information Matrix},
+    Year = {2018}}
+
+@inproceedings{Kuwamura2018,
+    Author = {Yuji Kuwamura and Kazuki Osawa and Rio Yokota},
+    Booktitle = {The 80th National Convention of IPSJ},
+    Date-Added = {2018-09-25 02:33:14 -0700},
+    Date-Modified = {2018-09-25 02:33:48 -0700},
+    Title = {Hyper-parameter Tuning for Approximate Natural Gradient Methods},
+    Year = {2018}}
+
+@inproceedings{Naganuma2018,
+    Author = {Hiroki Naganuma and Rio Yokota},
+    Booktitle = {HPC Asia, Poster Presentation},
+    Date-Added = {2018-09-25 02:31:51 -0700},
+    Date-Modified = {2018-09-25 02:33:04 -0700},
+    Title = {Accelerating Convolutional Neural Networks Using Low Precision Arithmetic},
+    Year = {2018}}
+
+@inproceedings{Naganuma2017,
+    Author = {Hiroki Naganuma and Rio Yokota},
+    Booktitle = {GTC Japan, Poster Presentation.},
+    Date-Added = {2018-09-25 02:30:46 -0700},
+    Date-Modified = {2018-09-25 02:31:42 -0700},
+    Title = {Verification of Low-precision Arithmetic for the Acceleration of Convolutional Neural Networks},
+    Year = {2017}}
+
+@inproceedings{Sekiya2017,
+    Author = {Akira Sekiya and Kazuki Oosawa and Hiroki Naganuma and Rio Yokota},
+    Booktitle = {158th Research Presentation Seminar in High Performance Computing},
+    Date-Added = {2018-09-25 02:27:39 -0700},
+    Date-Modified = {2018-09-25 02:31:43 -0700},
+    Title = {Acceleration of Matrix Multiplication in Deep Learning Using Low-Rank Approximation},
+    Year = {2017}}
+
+@inproceedings{Osawa2017c,
+    Author = {Kazuki Oosawa and Akira Sekiya and Hiroki Naganuma and Rio Yokota},
+    Booktitle = {Workshop on Pattern Recognition and Media Understanding},
+    Date-Added = {2018-09-25 02:21:13 -0700},
+    Date-Modified = {2018-09-25 02:27:10 -0700},
+    Title = {Acceleration of Convoluational Neural Networks Using Low-Rank Factorization},
+    Year = {2017}}
+
+@inproceedings{Osawa2017b,
+    Author = {Kazuki Osawa and Akira Sekiya and Hiroki Naganuma and Rio Yokota},
+    Booktitle = {Proceedings of the 22nd Conference of Japan Computational Engineering Society},
+    Date-Added = {2018-09-25 02:17:04 -0700},
+    Date-Modified = {2018-09-25 02:20:41 -0700},
+    Title = {Accelerating Convolutional Neural Networks Using Low-Rank Approximation},
+    Year = {2017}}
+
+@inproceedings{Osawa2017a,
+    Address = {Genoa, Italy},
+    Author = {Kazuki Osawa and Akira Sekiya and Hiroki Naganuma and Rio Yokota},
+    Booktitle = {The 2017 International Conference on High Performance Computing & Simulation},
+    Date-Added = {2018-09-25 02:14:26 -0700},
+    Date-Modified = {2018-09-25 02:15:40 -0700},
+    Title = {Accelerating Matrix Multiplication in Deep Learning by Using Low-Rank Approximation},
+    Year = {2017}}
+
+@inproceedings{Osawa2017,
+    Author = {Kazuki Osawa and Rio Yokota},
+    Booktitle = {Artificial Neural Networks and Machine Learning - ICANN 2017},
+    Date-Added = {2018-09-25 02:11:13 -0700},
+    Date-Modified = {2018-09-25 02:13:08 -0700},
+    Pages = {459--466},
+    Publisher = {Springer},
+    Series = {Lecture Notes in Computer Science},
+    Title = {Evaluating the Compression Efficiency of the Filters in Convolutional Neural Networks},
+    Volume = {10614},
+    Year = {2017}}
