--- a/matsu.bib
+++ b/matsu.bib
@@ -36,3 +36,37 @@
   howpublished = {http://ieeexplore.ieee.org/document/7840590/},
   year         = {2016},
 }
+
+
+@article{oyama-hpc158,
+  author  = {{大山 洋介} and {野村 哲弘} and {佐藤 育郎} and {松岡 聡}},
+  journal = {IPSJ SIG Technical Report, Vol. 2017-HPC-158},
+  number  = {30},
+  pages   = {1--10},
+  title   = {ディープラーニングのデータ並列学習における少精度浮動小数点数を用いた通信量の削減},
+  year    = {2017}
+}
+
+@article{oyama-hpc162,
+  author  = {Oyama, Yosuke and Ben-Nun, Tal and Hoefler, Torsten and Matsuoka, Satoshi},
+  journal = {IPSJ SIG Technical Report, Vol. 2017-HPC-162},
+  number  = {22},
+  pages   = {1--9},
+  title   = {{Less is More: Accelerating Deep Neural Networks with Micro-Batching}},
+  year    = {2017}
+}
+
+
+@ARTICLE{2018arXiv180404806O,
+   author = {{Oyama}, Y. and {Ben-Nun}, T. and {Hoefler}, T. and {Matsuoka}, S.
+  },
+    title = "{$\{$$\backslash$mu$\}$-cuDNN: Accelerating Deep Learning Frameworks with Micro-Batching}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1804.04806},
+ keywords = {Computer Science - Machine Learning, Computer Science - Distributed, Parallel, and Cluster Computing, Computer Science - Mathematical Software, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning, I.2.6},
+     year = 2018,
+    month = apr,
+   adsurl = {http://adsabs.harvard.edu/abs/2018arXiv180404806O},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
