updated publication entry

--- a/murata.bib
+++ b/murata.bib
@@ -32,3 +32,12 @@ year = "2018",
 month = "Dec",
 pages = "to appear",
 }
+
+@inproceedings{jun2018icdm, 
+author = "Choong, Jun Jin and Liu, Xin and Murata, Tsuyoshi",
+title = "Learning Community Structure with Variational Autoencoder", 
+booktitle = "Proceedings of The 2018 IEEE International Conference on Data Mining (ICDM 2018)", 
+year = "2018", 
+month = "Nov",
+pages = "to appear",
+}
