Added a new paper

--- a/murata.bib
+++ b/murata.bib
@@ -41,3 +41,12 @@ year = "2018",
 month = "Nov",
 pages = "to appear",
 }
+
+@inproceedings{kaushalya2018cna,
+author="Madhawa, Kaushalya and Murata, Tsuyoshi",
+title = "Exploring Partially Observed Networks with Nonparametric Bandits", 
+booktitle = "Proceedings of The 7th International Conference on Complex Networks and their Applications (CNA 2018)", 
+year = "2018", 
+month = "Dec",
+pages = "to appear",
+}
