added new paper

--- a/murata.bib
+++ b/murata.bib
@@ -39,7 +39,6 @@ title = "Learning Community Structure with Variational Autoencoder",
 booktitle = "Proceedings of The 2018 IEEE International Conference on Data Mining (ICDM 2018)", 
 year = "2018", 
 month = "Nov",
-pages = "to appear",
 }
 
 @inproceedings{kaushalya2018cna,
@@ -48,5 +47,12 @@ title = "Exploring Partially Observed Networks with Nonparametric Bandits",
 booktitle = "Proceedings of The 7th International Conference on Complex Networks and their Applications (CNA 2018)", 
 year = "2018", 
 month = "Dec",
-pages = "to appear",
+}
+
+@inproceedings{wijayanto2018bigcyber, 
+author = "Wijayanto, Arie Wahyu, Choong, Jun Jin and Madhawa, Kaushalaya and Murata, Tsuyoshi",
+title = "Robustness of Compressed Convolutional Neural Networks", 
+booktitle = "Proceedings of The 2018 IEEE Workshop on Big Data for CyberSecurity (BigData 2018)", 
+year = "2018", 
+month = "Dec",
 }
