--- a/murata.bib
+++ b/murata.bib
@@ -1,10 +1,10 @@
-@inproceedings{wijayanto2017asonam, 
-author = "Wijayanto, Arie Wahyu and Murata, Tsuyoshi", 
-title = "Flow-Aware Vertex Protection Strategy on Large Social Networks", 
-booktitle = "Proceedings of The 2017 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM 2017)", 
+@inproceedings{wijayanto2017asonam,
+author = "Wijayanto, Arie Wahyu and Murata, Tsuyoshi",
+title = "Flow-Aware Vertex Protection Strategy on Large Social Networks",
+booktitle = "Proceedings of The 2017 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM 2017)",
 series = "ASONAM 2017",
-year = "2017", 
-pages = "58-63", 
+year = "2017",
+pages = "58-63",
 month = "Aug",
 isbn = "978-1-4503-4993-2/17/07",
 }
@@ -23,36 +23,36 @@ pages = "5",
 issn = "2364-8228",
 }
 
-@inproceedings{wijayanto2018wi, 
+@inproceedings{wijayanto2018wi,
 author = "Wijayanto, Arie Wahyu and Murata, Tsuyoshi",
-title = "Learning Adaptive Graph Protection Strategy on Dynamic Networks via Reinforcement Learning", 
-booktitle = "Proceedings of The 2018 IEEE/WIC/ACM International Conference on Web Intelligence (WI 2018)", 
+title = "Learning Adaptive Graph Protection Strategy on Dynamic Networks via Reinforcement Learning",
+booktitle = "Proceedings of The 2018 IEEE/WIC/ACM International Conference on Web Intelligence (WI 2018)",
 series = "WI 2018",
-year = "2018", 
+year = "2018",
 month = "Dec",
 pages = "to appear",
 }
 
-@inproceedings{jun2018icdm, 
+@inproceedings{jun2018icdm,
 author = "Choong, Jun Jin and Liu, Xin and Murata, Tsuyoshi",
-title = "Learning Community Structure with Variational Autoencoder", 
-booktitle = "Proceedings of The 2018 IEEE International Conference on Data Mining (ICDM 2018)", 
-year = "2018", 
+title = "Learning Community Structure with Variational Autoencoder",
+booktitle = "Proceedings of The 2018 IEEE International Conference on Data Mining (ICDM 2018)",
+year = "2018",
 month = "Nov",
 }
 
 @inproceedings{kaushalya2018cna,
 author="Madhawa, Kaushalya and Murata, Tsuyoshi",
-title = "Exploring Partially Observed Networks with Nonparametric Bandits", 
-booktitle = "Proceedings of The 7th International Conference on Complex Networks and their Applications (CNA 2018)", 
-year = "2018", 
+title = "Exploring Partially Observed Networks with Nonparametric Bandits",
+booktitle = "Proceedings of The 7th International Conference on Complex Networks and their Applications (CNA 2018)",
+year = "2018",
 month = "Dec",
 }
 
-@inproceedings{wijayanto2018bigcyber, 
-author = "Wijayanto, Arie Wahyu, Choong, Jun Jin and Madhawa, Kaushalaya and Murata, Tsuyoshi",
-title = "Robustness of Compressed Convolutional Neural Networks", 
-booktitle = "Proceedings of The 2018 IEEE Workshop on Big Data for CyberSecurity (BigData 2018)", 
-year = "2018", 
+@inproceedings{wijayanto2018bigcyber,
+author = "Wijayanto, Arie  Wahyu and Choong, Jun Jin and Madhawa, Kaushalaya and Murata, Tsuyoshi",
+title = "Robustness of Compressed Convolutional Neural Networks",
+booktitle = "Proceedings of The 2018 IEEE Workshop on Big Data for CyberSecurity (BigData 2018)",
+year = "2018",
 month = "Dec",
 }
