Nikola auto commit.
Nikola version: 8.0.2

--- a/matsu.bib
+++ b/matsu.bib
@@ -60,7 +60,7 @@
 @ARTICLE{2018arXiv180404806O,
    author = {{Oyama}, Y. and {Ben-Nun}, T. and {Hoefler}, T. and {Matsuoka}, S.
   },
-    title = "{$\{$$\backslash$mu$\}$-cuDNN: Accelerating Deep Learning Frameworks with Micro-Batching}",
+    title = "{$\mu$-cuDNN: Accelerating Deep Learning Frameworks with Micro-Batching}",
   journal = {ArXiv e-prints},
 archivePrefix = "arXiv",
    eprint = {1804.04806},
