--- a/shinoda.bib
+++ b/shinoda.bib
@@ -1,13 +1,77 @@
-
-@inproceedings{Warnita2018,
+@article{Asami2019,
+  author = {Taichi Asami and Ryo Masumura and Yushi Aono and Koichi Shinoda},
+  title = {Recurrent out-of-vocabulary word detection based on distribution of features},
+  journal = {Computer speech \& language},
+  year = {2019},
+  volume = {58},
+  number = {},
+  pages = {247-259},
+  month = {Nov}
+}
+@inproceedings{Raden2019,
+  author = {Raden Mu'az Mun'im and Nakamasa Inoue and Koichi Shinoda},
+  title = {SEQUENCE-LEVEL KNOWLEDGE DISTILLATION FOR MODEL COMPRESSION OF ATTENTION-BASED SEQUENCE-TO-SEQUENCE SPEECH RECOGNITION},
+  booktitle = {ICASSP2019},
+  year = {2019},
+  pages = {6151-6155},
+  month = {May}
+}
+@inproceedings{Uto2019,
+  author = {Kuniaki Uto and Mauro Dalla Mura and Jocelyn Chanussot and Koichi Shinoda},
+  title = {Estimation of skylight conditions based on leaf-scale wheat images},
+  booktitle = {Images et data : méthodes d'analyse et modélisation pour l'agriculture numérique},
+  year = {2019},
+  pages = {},
+  month = {Mar}
+}
+@inproceedings{Dongxiao2019,
+  author = {Dongxiao WANG and Koichi SHINODA and Hirokazu KAMEOKA},
+  title = {A robust algorithm of phase recovery for speech enhancement},
+  booktitle = {IEICE Technical Report},
+  year = {2019},
+  pages = {137-142},
+  month = {Mar}
+}
+@inproceedings{Dongxiao2019a,
+  author = {Dongxiao Wang and Hirokazu Kameoka and Koichi Shinoda},
+  title = {Improving the robustness of multiple input spectrogram inversion},
+  booktitle = {Acoustical Society of Japan (ASJ) 2019 Spring Meeting},
+  year = {2019},
+  pages = {1307-1308},
+  month = {Mar}
+}
+@inproceedings{Warnita2019,
 Author = "Warnita, Tifani and Inoue, Nakamasa and Shinoda, Koichi",
 Title = "Detecting Alzheimer's Disease Using Gated Convolutional Neural Network from Audio Data",
-Booktitle = "Proc. Interspeech",
-Year = "2018"
+Booktitle = {IEICE Technical Report},
+month = {Feb},
+Year = "2019"
+}
+@inproceedings{Inoue2018a,
+  author = {Nakamasa Inoue and Koichi Shinoda},
+  title = {Few-Shot Adaptation for Multimedia Semantic Indexing},
+  booktitle = {Proceedings of the 26th ACM international conference on Multimedia},
+  year = {2018},
+  pages = {1110-1118},
+  month = {Oct}
+}
+@inproceedings{Okabe2019,
+  author = {Koji Okabe and Takafumi Koshinaka and Koichi Shinoda},
+  title = {Attentive Statistics Pooling for Deep Speaker Embedding},
+  booktitle = {Proc. Interspeech 2018},
+  year = {2018},
+  pages = {2252-2256},
+  month = {Sep}
 }
 @inproceedings{Zhang2018,
 Author = "Zhang, Jiacen and Inoue, Nakamasa and Shinoda, Koich",
 Title = "I-vector Transformation Using Conditional Generative Adversarial Networks for Short Utterance Speaker Verification",
+Booktitle = "Proc. Interspeech",
+Year = "2018"
+}
+@inproceedings{Warnita2018,
+Author = "Warnita, Tifani and Inoue, Nakamasa and Shinoda, Koichi",
+Title = "Detecting Alzheimer's Disease Using Gated Convolutional Neural Network from Audio Data",
 Booktitle = "Proc. Interspeech",
 Year = "2018"
 }
@@ -17,11 +81,43 @@ Title = "A Fine-to-Coarse Convoluational Neural Network for 3D Human Action Reco
 Booktitle = "Proc. British Machine Vision Conference (BMVC)",
 Year = "2018"
 }
+@inproceedings{Le2018a,
+  author = {Thao Le Minh and Nobuyuki Shimizu and Takashi Miyazaki and Koichi Shinoda},
+  title = {Deep Learning Based Multi-modal Addressee Recognition in Visual Scenes with Utterances},
+  booktitle = {Proceedings of the Twenty-Seventh International Joint Conference on Artificial Intelligence (IJCAI-18)},
+  year = {2018},
+  pages = {1546-1553},
+  month = {Jul}
+}
 @inproceedings{Zhang2018b,
 Author = "Zhang, Haoyi and Liu, Conggui and Inoue, Nakamasa and Shinoda, Koichi",
 Title = "Multi-Task Autoencoder for Noise-Robust Speech Recognition",
 Booktitle = "Proc. ICASSP",
-Year = "2018"
+Year = "2018",
+Pages = {5599-5603}
+}
+@inproceedings{Lee2018,
+  author = {K. A. LEE and H. Yamamoto and K. Okabe and Q. Wang and L. Guo and T. Koshinaka and J. Zhang and K. Shinoda},
+  title = {The NEC-TT Speaker Verification System for SRE'18},
+  booktitle = {Proc. NIST 2018 Speaker Recognition Evaluation},
+  year = {2018},
+  pages = {},
+  month = {Dec}
+}
+@inproceedings{Inoue2018,
+  author = {Nakamasa Inoue and Chihiro Shiraishi and Aleksandr Drozd and Koichi Shinoda and Shi-wook Lee and Alex Chichung Kot},
+  title = {VANT at TRECVID 2018},
+  booktitle = {Proc. TRECVID workshop},
+  year = {2018},
+  pages = {},
+  month = {Nov}
+}
+@inproceedings{Le2018b,
+Author = "Le, Thao-Minh and Inoue, Nakamasa and Shinoda, Koichi",
+Title = "Skeleton-based Human Action Recognition with Fine-to-Coarse Convolutional Neural Network",
+Booktitle = "Technical Reports of IEICE PRMU",
+Year = "2018",
+Pages = "61-64"
 }
 @inproceedings{Zhang2018c,
 Author = "Zhang, Jiacen and Inoue, Nakamasa and Shinoda, Koich",
@@ -34,6 +130,14 @@ Author = "Warnita, Tifani and Inoue, Nakamasa and Shinoda, Koichi",
 Title = "Alzheimer's Disease Prediction Using Audio Gated Convolutional Neural Network",
 Booktitle = "ASJ 2018 Autumn Meeting",
 Year = "2018"
+}
+@inproceedings{Long2018,
+  author = {Yan Long and Nakamasa Inoue and Koichi Shinoda and Yoichi Yatsu and Ryosuke Itoh and Nobuyuki Kawai},
+  title = {Astronomical Image Subtraction for Transient Detection Using CNN},
+  booktitle = {The 21st Meeting on Image Recognition and Understanding (MIRU)},
+  year = {2018},
+  pages = {},
+  month = {Aug}
 }
 @inproceedings{Kanai2018,
 Author = "怜, 金井 and 中順, 井上 and 時旭, 李 and 浩一, 篠田",
