--- a/yokota.bib
+++ b/yokota.bib
@@ -1,3 +1,141 @@
+@inproceedings{Yokota2019a,
+	Author = {R. Yokota},
+	Booktitle = {IPAM Workshop I: Big Data Meets Large-Scale Computing},
+	Date-Added = {2019-09-24 19:29:29 +0900},
+	Date-Modified = {2019-09-24 19:30:35 +0900},
+	Month = {September 24-28},
+	Title = {Optimization Methods for Large Scale Distributed Deep Learning},
+	Year = {2018}}
+
+@inproceedings{Naganuma2019c,
+	Address = {Fukuoka, Japan},
+	Author = {H. Naganuma and R. Yokota},
+	Booktitle = {The 81st National Convention of IPSJ},
+	Date-Added = {2019-09-24 19:28:51 +0900},
+	Date-Modified = {2019-09-24 19:29:27 +0900},
+	Month = {March 14-16},
+	Title = {Smoothing of the Objective Function for Large Scale Parallel Deep Learning},
+	Year = {2019}}
+
+@inproceedings{Ootomo2019a,
+	Address = {Fukuoka, Japan},
+	Author = {H. Ootomo and R. Yokota},
+	Booktitle = {The 81st National Convention of IPSJ},
+	Date-Added = {2019-09-24 19:26:48 +0900},
+	Date-Modified = {2019-09-24 19:28:49 +0900},
+	Month = {March 14-16},
+	Title = {Batched QR Decomposition Using TensorCores},
+	Year = {2019}}
+
+@inproceedings{Nakata2019,
+	Address = {Fukuoka, Japan},
+	Author = {H. Nakata and K. Osawa and R. Yokota},
+	Booktitle = {The 81st National Convention of IPSJ},
+	Date-Added = {2019-09-24 19:25:57 +0900},
+	Date-Modified = {2019-09-24 19:26:45 +0900},
+	Month = {March 14-16},
+	Title = {Variational Inference in Deep Learning Using Natural Gra- dient Descent},
+	Year = {2019}}
+
+@inproceedings{Osawa2019b,
+	Address = {Fukuoka, Japan},
+	Author = {K. Osawa and R. Yokota and C.-S. Foo and V. Chandrasekhar},
+	Booktitle = {The 81st National Convention of IPSJ},
+	Date-Added = {2019-09-24 19:25:00 +0900},
+	Date-Modified = {2019-09-24 19:25:55 +0900},
+	Month = {March 14-16},
+	Title = {Second Order Optimization for Large Scale Parallel Deep Learning Through Analysis of the Fisher Information Matrix},
+	Year = {2019}}
+@inproceedings{Yokota2019,
+	Address = {Tokyo, Japan},
+	Author = {R. Yokota and K. Osawa and Y. Tsuji and Y. Ueno and A. Naruse},
+	Booktitle = {IEICE General Conference},
+	Date-Added = {2019-09-24 19:24:12 +0900},
+	Date-Modified = {2019-09-24 19:24:57 +0900},
+	Month = {March 19-22},
+	Title = {Second Order Optimization for Large Scale Parallel Deep Learning},
+	Year = {2019}}
+
+@inproceedings{Naganuma2019b,
+	Address = {Tokyo, Japan},
+	Author = {H. Naganuma and R. Yokota},
+	Booktitle = {IEICE General Conference (poster session)},
+	Date-Added = {2019-09-24 19:23:25 +0900},
+	Date-Modified = {2019-09-24 19:24:09 +0900},
+	Month = {March 19-22},
+	Title = {Improving the Generalization Gap in Large-batch Training Using Noise Injection},
+	Year = {2019}}
+
+@inproceedings{Ueno2019,
+	Address = {Larnaca, Cyprus},
+	Author = {Y. Ueno and R. Yokota},
+	Booktitle = {19th IEEE/ACM International Symposium on Cluster, Cloud and Grid Computing (CCGRID)},
+	Date-Added = {2019-09-24 19:22:35 +0900},
+	Date-Modified = {2019-09-24 19:23:19 +0900},
+	Month = {May 14-17},
+	Title = {Exhaustive Study of Hierarchical AllReduce Patterns for Large Messages Between GPUs},
+	Year = {2019}}
+
+@inproceedings{Naganuma2019a,
+	Address = {Larnaca, Cyprus},
+	Author = {H. Naganuma and R. Yokota},
+	Booktitle = {2nd High Performance Machine Learning Workshop CCGrid2019 (HPML2019)},
+	Date-Added = {2019-09-24 19:20:59 +0900},
+	Date-Modified = {2019-09-24 19:22:29 +0900},
+	Month = {May 14-17},
+	Title = {A Performance Improvement Approach for Second-Order Optimization in Large Mini-batch Training},
+	Year = {2019}}
+
+@inproceedings{Naganuma2019,
+	Address = {Tokyo, Japan},
+	Author = {H. Naganuma and R. Yokota},
+	Booktitle = {The 3rd Cross-disciplinary Workshop on Computing Systems, Infrastruc- tures, and Programming (xSIG)},
+	Date-Added = {2019-09-24 19:20:11 +0900},
+	Date-Modified = {2019-09-24 19:20:55 +0900},
+	Month = {May 27-29},
+	Title = {Effectiveness of Smoothing for Large-batch Training Using Natural Gradient Descent},
+	Year = {2019}}
+
+@inproceedings{Osawa2019a,
+	Address = {Long Beach, USA},
+	Author = {K. Osawa and Y. Tsuji and Y. Ueno and A. Naruse and R. Yokota and S. Matsuoka},
+	Booktitle = {IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	Date-Added = {2019-09-24 19:18:54 +0900},
+	Date-Modified = {2019-09-24 19:20:07 +0900},
+	Month = {June 16-20},
+	Title = {Second-order Optimization Method for Large Mini-batch: Training ResNet-50 on ImageNet in 35 Epochs},
+	Year = {2019}}
+
+@inproceedings{Spalthoff2019,
+	Address = {Kitami, Japan},
+	Author = {P. Spalthoff and R. Yokota},
+	Booktitle = {The 170th Workshop on High Performance Computing (SWoPP2019)},
+	Date-Added = {2019-09-24 15:33:02 +0900},
+	Date-Modified = {2019-09-24 19:18:40 +0900},
+	Month = {July 24},
+	Title = {Flexible and Simplistic Hierarchical Matrix-Based Fast Direct Solver},
+	Year = {2019}}
+
+@inproceedings{Ootomo2019,
+	Address = {Kitami, Japan},
+	Author = {H. Ootomo and R. Yokota},
+	Booktitle = {The 170th Work- shop on High Performance Computing (SWoPP2019)},
+	Date-Added = {2019-09-24 15:29:39 +0900},
+	Date-Modified = {2019-09-24 15:32:38 +0900},
+	Month = {July 24},
+	Title = {GPU Implementation of TSQR Using Tensor Cores},
+	Year = {2019}}
+
+@inproceedings{Osawa2019,
+	Address = {Vancouver, Canada},
+	Author = {K. Osawa, and S. Swaroop, and A. Jain, and R. Eschenhagen, and R. E. Turner, and R. Yokota, and M. E. Khan},
+	Booktitle = {The 33rd Conference on Neural Information Processing Systems (NeurIPS 2019)},
+	Date-Added = {2019-09-24 15:27:56 +0900},
+	Date-Modified = {2019-09-24 15:33:00 +0900},
+	Month = {Dec. 8-14},
+	Title = {Practical Deep Learning with Bayesian Principles},
+	Year = {2019}}
+
 @inproceedings{Naganuma2018a,
     Author = {Hiroki Naganuma and Shun Iwase and Linsho Kaku and Hikaru Nakata and Rio Yokota},
     Booktitle = {Forum on Information Technology},
